# mongo_odm

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  mkdocs.yml  mypy.ini  pyproject.toml
.github/workflows/: issue-manager.yml  publish.yml  test.yml
docs/: conf.py  index.md  index.rst
docs/_build/doctrees/: environment.pickle  index.doctree  modules.doctree  motor_odm.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  modules.html  motor_odm.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/: modules.rst.txt  motor_odm.rst.txt
docs/_build/html/_static/: documentation_options.js
example/: main.py
mongo_odm/: config.py  cursor.py  documents.py  exceptions.py  fields.py  managers.py  registry.py  utils.py
motor_odm/: __init__.py  config.py  cursor.py  documents.py  exceptions.py  fields.py  managers.py  registry.py  utils.py
motorodm/: config.py  cursor.py  documents.py  fields.py  managers.py  registry.py  utils.py
scripts/: build-docs.sh  docs-live.sh  format.sh  lint.sh  lint_format_file.sh  test.sh
tests/: conftest.py  document.py  test_config.py  test_cursor.py  test_documents.py  test_fields.py  test_registry.py  test_utils.py
tests/documents/: test_db.py  test_documents.py
tests/managers/: test_base.py  test_crud_manager.py  test_documents.py  test_query_manager.py
