[tool.poetry]
name = "motor_odm"
version = "1.0.0"
description = "Python async mongodb ODM using motor and pydantic"
authors = ["Ramzi Tannous <ramzi271996@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6.1"
pydantic = "^1.7.3"
motor = "^2.3.0"

[tool.poetry.dev-dependencies]
mypy = "^0.790"
black = "^20.8b1"
isort = "^5.0.5"
autoflake = "^1.3.1"
flake8 = "^3.7.9"
pre-commit = "^2.4.0"
pytest = "^6.0.1"
pytest-cov = "^2.8.1"
mkdocs = "^1.1"
mkdocs-material = "^6.0.1"
markdown-include = "^0.6.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
