[tool.poetry]
name = "mongo_odm"
version = "1.0.1"
description = "Python async mongodb ODM using motor and pydantic"
authors = ["Ramzi Tannous <ramzi271996@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
pydantic = ">=1.6.0,< 1.9.0"
motor = ">=2.1.0,<=2.4.0"

[tool.poetry.dev-dependencies]
mypy = "^0.812"
black = "^20.8b1"
isort = "^5.0.5"
autoflake = "^1.3.1"
flake8 = "^3.7.9"
pre-commit = "^2.4.0"
pytest = "^6.0.1"
pytest-cov = "^2.8.1"
mkdocs = "^1.1"
mkdocs-material = "^7.1.1"
markdown-include = "^0.6.0"
pytest-asyncio = "^0.14.0"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
